syntax = "proto3";

package apisyniq;

import "google/protobuf/struct.proto";

option java_multiple_files = true;
option java_package = "com.apisyniq.grpc";
option java_outer_classname = "ControllerOutputProto";


// message DescribeDto {
//   string name = 1;
//   string description = 2;
//   string data_type = 3;
//   string default_value = 4;
//   string options = 5;
//   bool auto_execute = 6;
//   string example = 7;
// }


// message DtoSchema {
//   string class_name = 1;
//   string name = 2;
//   string description = 3;
//   string example = 4;
//   repeated DescribeDto fields = 5;
// }


// message InputsDto {
//   google.protobuf.Struct input_body = 1;
//   google.protobuf.Struct input_path_params = 2;
//   google.protobuf.Struct input_query_params = 3;
//   google.protobuf.Struct input_variables = 4;
//   google.protobuf.Struct input_headers = 5;
//   google.protobuf.Struct input_cookies = 6;
// }


// message OutputData {
//   string name = 1;
//   string endpoint = 2;
//   string http_method = 3;
//   repeated string tags = 4;
//   string description = 5;
//   string return_description = 6;

//   InputsDto inputs_describe = 7;
//   google.protobuf.Struct response_body = 8;
//   bool auto_execute = 9;
//   InputsDto inputs = 10;
//   google.protobuf.Struct output_body = 11;
//   repeated string filtering_tags = 12;
//   map<string, DtoSchema> dto_schemas = 13;
// }


message ControllerMap {
  map<string, ControllerEndpoints> controllers = 1;
}

message ControllerEndpoints {
  repeated EndpointWrapper endpoint_list = 1;
}

message EndpointWrapper {
  map<string, google.protobuf.Struct> endpoints = 1;
}

message Empty {}

service EndpointService {
  rpc getEndpointsInformation(Empty) returns (ControllerMap);
}


// Map<String, List<Map<String, OutputData>>>
